--- a/final_project/package.json
+++ b/final_project/package.json
@@ -18,6 +18,9 @@
     "@wdio/mocha-framework": "^8.8.0",
     "@wdio/spec-reporter": "^8.8.0",
     "chromedriver": "^112.0.0",
+    "eslint": "^8.39.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "wdio-chromedriver-service": "^8.1.1"
   },
   "dependencies": {
